[package]
name = "lanb"
version = "0.1.0"
authors = ["p1486 xzstd099@protonmail.com"]
description = "Create symbolic links and hard links."
license = "MIT OR Apache-2.0"
repository = "https://github.com/p1486/lanb"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.75", features = ["std", "backtrace"] }
clap = { version = "4.4.10", features = ["derive"] }
colored = "2.0.4"
filey = "0.3.9"
thiserror = "1.0.50"
